--- a/styles.css
+++ b/styles.css
@@ -34,4 +34,22 @@ body {
   .hex.selected {
     background-color: #ff9933;
   }
+
+  .character {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    background-color: blue; /* default color, can be changed dynamically */
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none; /* so clicks go through to hex */
+    z-index: 5;
+  }
+  
+  .hex.highlight {
+    outline: 3px dashed yellow;
+  }
+  
   
